@@ -67,6 +67,7 @@ Mejorado Debug CPU:
 * Correcciones:
 
 Corregido bloqueo de semáforos en Windows
+Corregido teclado de Sinclair QL keyboard: permitir escritura rápida
 Corregido cálculo de uso de cpu cuando el footer está desactivado
 Corregido asignación de esxdos handler root dir al cargar un archivo .nex sin indicar path desde linea de comandos
 Corregido bug al restaurar un snapshot ZSF con DivIDE activado
